Sonar clean-up